[tool.poetry]
name = "questions-three"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
wheel = "0.30.0"
twine = "1.9.1"
lxml = "4.1.1"
twin-sister = "4.7.3.0"
expects = "0.8.0"
parameterized = "0.7.0"
pyfakefs = "3.4.3"
requests = "2.18.4"
PyYAML = "5.1"
junit-xml = "1.8"
setuptools = "^54.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
